--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <section class="new-tweet">
             <h2>Compose Tweet</h2>
             <form action="/tweets" method="POST" enctype="application/x-www-form-urlencoded">
-              <textarea name="text" placeholder="What are you humming about?"></textarea>
+              <textarea rows="1" name="text" placeholder="What are you humming about?"></textarea>
               <input id="tweet-button" type="submit" value="Tweet">
               <span class="counter">140</span>
             </form>
