--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,14 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/compose-char-counter.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
 
   <body>
@@ -29,10 +31,10 @@
     <nav>
       <div class="title">tweeter</div>
       <div class="subtitle"><span class="first-word">Write</span> a new tweet
-      <div class="down-arrow">⬇</div></div>
+      <div class="down-arrow"><i class="fas fa-arrow-down"></i></div></div>
     </nav>
 
-    <header>
+    <header id="main">
       <div>
         <img src="/images/profile-hex.png"/>
       </div>
@@ -52,7 +54,26 @@
             </form>
           </section>
 
-          <container></container>
+  <section id="tweets-container">
+
+    <article class="tweet">
+    <header>
+      <div class="flex">
+      <div class="user"><img src="https://i.imgur.com/73hZDYK.png"></i>Placeholder User</div>
+      <div class="handle">@Placeholder</div>
+      </div>
+      <div class="tweet-body"> This is the tweet.</div>
+    </header>
+
+    <footer>
+      <span class="date">10 days ago</span>
+      <span class="icons"><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i><i class="fas fa-heart"></i></span>
+    </footer>
+  </article>
+
+  </section>
     </main>
+
+
   </body>
 </html>
