Add general funcationality of being able to add tweets and buttons to navigate throughout the page

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,11 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <div class="title">tweeter</div>
-      <div class="subtitle"><span class="first-word">Write</span> a new tweet
+      <div class="navbutton"><span class="first-word">Write</span> a new tweet
       <div class="down-arrow"><i class="fas fa-arrow-down"></i></div></div>
     </nav>
+
+      <button class="nagivate-up-button">^</button>
 
     <header id="main">
       <div>
@@ -43,6 +45,7 @@
       </div>
     </header>
 
+    
     <!-- Page-specific (main) content here -->
     <main class="container">
         <section class="new-tweet">
@@ -72,6 +75,7 @@
   </article>
 
   </section>
+
     </main>
 
 
