Fix the error messages

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <main class="container">
         <section class="new-tweet">
           <div class="error-message">Error Message</div>
-            <h2>Compose Tweet</h2>
+            <h2 class="compose-tweet">Compose Tweet</h2>
             <form action="/tweets" method="POST" enctype="application/x-www-form-urlencoded">
               <textarea class="new-tweet" rows="1" name="text" placeholder="What are you humming about?"></textarea>
               <input id="tweet-button" type="submit" value="Tweet">
