--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
      
     <div id="desktop-width">  
       <header id="main">
-        <div>
+        <div class ="display">
           <img src="/images/profile-hex.png"/>
         </div>
       <div>
@@ -67,7 +67,7 @@
       <article class="tweet">
       <header>
       <div class="flex">
-      <div class="user"><img src="https://i.imgur.com/73hZDYK.png"></i>Placeholder User</div>
+      <div class="user"><span class="smallpic"><img src="https://i.imgur.com/73hZDYK.png"></span></i>Placeholder User</div>
       <div class="handle">@Placeholder</div>
       </div>
       <div class="tweet-body"> This is the tweet.</div>
