UI/UX Changes to be look more nice

--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,13 @@
      
     <div id="desktop-width">  
       <header id="main">
-        <div class ="display">
+        <div id ="display">
           <img src="/images/profile-hex.png"/>
         </div>
-      <div>
+        <div id ="display-name">
           <h2></h2><span class="first-word">Ricky</span> Chhoukdean</h2>
-        </div>
+          <br>
+          <div class = "description">Random description Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quam sit modi magnam tempora dolore sapiente exercitationem ex similique temporibus.
       </header>
   
 
